--- a/.ditz/project.yaml
+++ b/.ditz/project.yaml
@@ -4,5 +4,13 @@ version: "0.5"
 components: 
 - !ditz.rubyforge.org,2008-03-06/component 
   name: cupage
-releases: []
-
+releases: 
+- !ditz.rubyforge.org,2008-03-06/release 
+  name: 0.5.0
+  status: :unreleased
+  release_time: 
+  log_events: 
+  - - 2010-01-28 10:09:41.875818 Z
+    - James Rowe <jnrowe@gmail.com>
+    - created
+    - ""
