Use cupage as package name.

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 build_dist = sdist --formats=gztar,bztar,zip
 
 [nosetests]
-cover-package = libcupage cupage
+cover-package = cupage
 detailed-errors = 1
 with-coverage = 1
 with-doctest = 1
