Set default for Babel's extract_messages output file.

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,3 +12,6 @@ upload-dir = doc/.build/html
 [compile_catalog]
 directory = cupage/locale
 statistics = true
+
+[extract_messages]
+output-file = cupage/locale/cupage.pot
