Set defaults for Babel's init_catalog distribute command.

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,3 +15,7 @@ statistics = true
 
 [extract_messages]
 output-file = cupage/locale/cupage.pot
+
+[init_catalog]
+input-file = cupage/locale/cupage.pot
+output-dir = cupage/locale
