--- a/setup.cfg
+++ b/setup.cfg
@@ -19,3 +19,8 @@ output-file = cupage/locale/cupage.pot
 [init_catalog]
 input-file = cupage/locale/cupage.pot
 output-dir = cupage/locale
+
+[update_catalog]
+input-file = cupage/locale/cupage.pot
+output-dir = cupage/locale
+ignore-obsolete = true
