[Tr] Set wheel packages as universal

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,3 +19,6 @@ output-dir = cupage/locale
 input-file = cupage/locale/cupage.pot
 output-dir = cupage/locale
 ignore-obsolete = true
+
+[wheel]
+universal = 1
