--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ python:
   - 3.2
   - 3.3
 install:
-  - pip install --use-mirrors -r extra/requirements-test.txt
-  - pip install --use-mirrors .
+  - pip install -r extra/requirements-test.txt
+  - pip install .
 script:
   - nose2 -v tests
 branches:
