Switch to pytest runner
Far slower than nose2, almost four times in this project.  Perhaps it
is fast enough though, we'll see…

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,12 @@ output-file = cupage/locale/cupage.pot
 input-file = cupage/locale/cupage.pot
 output-dir = cupage/locale
 
+[tool:pytest]
+addopts =
+    --durations=5
+    --strict
+minversion = 4.0
+
 [update_catalog]
 input-file = cupage/locale/cupage.pot
 output-dir = cupage/locale
