--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,16 @@ all-files = 1
 directory = cupage/locale
 statistics = true
 
+[coverage:report]
+exclude_lines =
+    # Have to re-enable the standard pragma
+    pragma: no cover
+
+    if __name__ == .__main__.:
+fail_under = 24
+precision = 2
+skip_covered = True
+
 [extract_messages]
 output-file = cupage/locale/cupage.pot
 
@@ -17,6 +27,7 @@ output-dir = cupage/locale
 
 [tool:pytest]
 addopts =
+    --cov cupage --cov-report term-missing --no-cov-on-fail
     --durations=5
     --strict
 minversion = 4.0
