--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,11 @@
+dist: xenial
 language: python
 python:
-  - 2.6
-  - 2.7
-  - 3.2
-  - 3.3
-  - 3.4
+  - 3.6
+  - 3.7
+  - 3.8
 install:
-  # We don't want to support external fetches, but the 2.6 case is forcing it on
-  # us for argparse
-  - if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; then
-      pip install --allow-external argparse -r extra/requirements-test.txt;
-    else
-      pip install -r extra/requirements-test.txt;
-    fi
-  - pip install .
+  - pip install -r extra/requirements-test.txt
 script:
   - nose2 -v tests
 branches:
