--- a/extra/requirements-doc.txt
+++ b/extra/requirements-doc.txt
@@ -1,3 +1,6 @@
 -r requirements.txt
-sphinx>=1.1
+
+sphinx>=2.0
+sphinx_rtd_theme>=0.4.3
 sphinxcontrib-blockdiag>=1.0.2
+sphinxcontrib-spelling>=4.2.1
