Move setup() metadata to setup.cfg
This is mostly about using a generic template, so that I’m not trying to
sync thirty different versions of the same code.  We’re not there yet,
but we’re on the way.

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,6 +14,59 @@ fail_under = 22
 precision = 2
 skip_covered = True
 
+[metadata]
+name = cupage
+version = attr: cupage._version.dotted
+author = James Rowe
+author_email = jnrowe@gmail.com
+description = A tool to check for updates on web pages
+long_description = file: README.rst
+keywords = admin, update, web
+license = GPL-3
+url = https://github.com/JNRowe/cupage
+classifiers =
+    Development Status :: 4 - Beta
+    Environment :: Console
+    Intended Audience :: Developers
+    Intended Audience :: End Users/Desktop
+    Intended Audience :: Other Audience
+    Intended Audience :: System Administrators
+    License :: OSI Approved :: GNU General Public License (GPL)
+    Natural Language :: English
+    Operating System :: OS Independent
+    Programming Language :: Python
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3 :: Only
+    Topic :: Internet
+    Topic :: Internet :: WWW/HTTP
+    Topic :: Internet :: WWW/HTTP :: Indexing/Search
+    Topic :: Internet :: WWW/HTTP :: Site Management
+    Topic :: Internet :: WWW/HTTP :: Site Management :: Link Checking
+    Topic :: Other/Nonlisted Topic
+    Topic :: Text Processing
+    Topic :: Text Processing :: Markup :: HTML
+    Topic :: Text Processing :: Markup :: XML
+    Topic :: Utilities
+python_requires = >=3.6
+project_urls =
+    Contributors = https://github.com/JNRowe/cupage/contributors/
+    Documentation = https://cupage.readthedocs.io/
+    Git repository = https://github.com/JNRowe/cupage/
+    Issue tracker = https://github.com/JNRowe/cupage/issues/
+setup_requires = setuptools>=40.0.0
+
+[options]
+include_package_data = True
+packages = cupage
+zip_safe = True
+
+[options.entry_points]
+console_scripts =
+    cupage = cupage.cmdline:main
+
 [tool:pytest]
 addopts =
     --cov cupage --cov-report term-missing --no-cov-on-fail
